# Med-Stalker

./: Makefile  README.md  package-lock.json
backend/: .env.example  .gitignore  Makefile  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
backend/api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/management/commands/: seed_dev_data.py
backend/api/migrations/: 0001_initial_models.py  0002_appointment.py  0003_message.py  0003_remove_appointment_ends_at.py
backend/api/tests/: factories.py  test_appointments.py  test_auth.py  test_diagnoses.py  test_doctors.py  test_models.py  test_patients.py  test_prescriptions.py
backend/config/: asgi.py  logging.py  middleware.py  settings.py  urls.py  wsgi.py
docs/: api-contract.md  architecture.md  endpoints.md
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/med-stalker-frontend/: README.md  angular.json  package-lock.json  package.json
frontend/med-stalker-frontend/src/: index.html
frontend/med-stalker-frontend/src/app/: app.spec.ts
frontend/src/: index.html  styles.css  styles.scss
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.spec.ts  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/core/: api-errors.ts  api.ts  models.ts
frontend/src/app/core/auth/: auth.guard.ts  (+2 more)
frontend/src/environments/: environment.ts
src/app/core/diagnoses/: diagnosis.service.ts
src/app/pages/book-appointment/: book-appointment.page.scss  book-appointment.page.ts
src/app/pages/chat/: chat.page.ts
(+72 files in other folders)
